--- a/beginSpringCore/pom.xml
+++ b/beginSpringCore/pom.xml
@@ -9,5 +9,15 @@
   		<artifactId>spring-context</artifactId>
   		<version>4.3.7.RELEASE</version>
   	</dependency>
+  	<dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  		<version>8.0.14</version>
+  	</dependency>
+  	<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+    <version>3.0.3.RELEASE</version>
+</dependency>
   </dependencies>
 </project>
