--- a/beginSpringCore/pom.xml
+++ b/beginSpringCore/pom.xml
@@ -18,6 +18,17 @@
     <groupId>org.springframework</groupId>
     <artifactId>spring-jdbc</artifactId>
     <version>3.0.3.RELEASE</version>
-</dependency>
+	</dependency>
+	<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>4.3.7.RELEASE</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>eclipselink</artifactId>
+			<version>2.6.5</version>
+		</dependency>
   </dependencies>
 </project>
