--- a/beginSpringCore/pom.xml
+++ b/beginSpringCore/pom.xml
@@ -30,5 +30,10 @@
 			<artifactId>eclipselink</artifactId>
 			<version>2.6.5</version>
 		</dependency>
+		<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-core</artifactId>
+		<version>5.2.3.Final</version>
+	</dependency>
   </dependencies>
 </project>
