--- a/beginSpringCore/pom.xml
+++ b/beginSpringCore/pom.xml
@@ -10,6 +10,11 @@
   		<version>4.3.7.RELEASE</version>
   	</dependency>
   	<dependency>
+              <groupId>org.springframework</groupId>
+              <artifactId>spring-tx</artifactId>
+              <version>4.1.6.RELEASE</version>
+           </dependency>
+  	<dependency>
   		<groupId>mysql</groupId>
   		<artifactId>mysql-connector-java</artifactId>
   		<version>8.0.14</version>
