--- a/beginSpringCore/pom.xml
+++ b/beginSpringCore/pom.xml
@@ -40,5 +40,16 @@
 		<artifactId>hibernate-core</artifactId>
 		<version>5.2.3.Final</version>
 	</dependency>
+	<dependency>
+		<groupId>org.aspectj</groupId>
+		<artifactId>aspectjrt</artifactId>
+		<version>1.8.9</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.aspectj</groupId>
+		<artifactId>aspectjweaver</artifactId>
+		<version>1.8.9</version>
+	</dependency>
   </dependencies>
 </project>
